tests/baselines/reference/functionImplementationErrors.errors.txt
tests/cases/conformance/functions/functionImplementationErrors.ts(3,10): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(7,19): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(11,10): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(17,10): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(26,16): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
tests/cases/conformance/functions/functionImplementationErrors.ts(31,17): error TS2373: Initializer of parameter 'n' cannot reference identifier 'm' declared after it.
tests/cases/conformance/functions/functionImplementationErrors.ts(36,17): error TS2373: Initializer of parameter 'n' cannot reference identifier 'm' declared after it.
tests/cases/conformance/functions/functionImplementationErrors.ts(50,10): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(54,10): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(58,11): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(62,10): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(66,11): error TS2354: No best common type exists among return expressions.
tests/cases/conformance/functions/functionImplementationErrors.ts(70,11): error TS2354: No best common type exists among return expressions.


==== tests/cases/conformance/functions/functionImplementationErrors.ts (13 errors) ====
    
    // FunctionExpression with no return type annotation with multiple return statements with unrelated types
    var f1 = function () {
             ~~~~~~~~
!!! error TS2354: No best common type exists among return expressions.
        return '';
        return 3;
    };
    var f2 = function x() {
                      ~
!!! error TS2354: No best common type exists among return expressions.
        return '';
        return 3;
    };
    var f3 = () => {
             ~~~~~~~
        return '';
    ~~~~~~~~~~~~~~
        return 3;
    ~~~~~~~~~~~~~
    };
    ~
!!! error TS2354: No best common type exists among return expressions.
    
    // FunctionExpression with no return type annotation with return branch of number[] and other of string[]
    var f4 = function () {
             ~~~~~~~~
!!! error TS2354: No best common type exists among return expressions.
        if (true) {
            return [''];
        } else {
            return [1];
        }
    }
    
    // Function implemetnation with non -void return type annotation with no return
    function f5(): number {
                   ~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
    }
    
    var m;
    // Function signature with parameter initializer referencing in scope local variable
    function f6(n = m) {
                    ~
!!! error TS2373: Initializer of parameter 'n' cannot reference identifier 'm' declared after it.
        var m = 4;
    }
    
    // Function signature with initializer referencing other parameter to the right
    function f7(n = m, m?) {
                    ~
!!! error TS2373: Initializer of parameter 'n' cannot reference identifier 'm' declared after it.
    }
    
    // FunctionExpression with non -void return type annotation with a throw, no return, and other code
    // Should be error but isn't
    undefined === function (): number {
        throw undefined;
        var x = 4;
    };
    
    class Base { private x; }
    class AnotherClass { private y; }
    class Derived1 extends Base { private m; }
    class Derived2 extends Base { private n; }
    function f8() {
             ~~
!!! error TS2354: No best common type exists among return expressions.
        return new Derived1();
        return new Derived2();    
    }
    var f9 = function () {
             ~~~~~~~~
!!! error TS2354: No best common type exists among return expressions.
        return new Derived1();
        return new Derived2();
    };
    var f10 = () => {
              ~~~~~~~
        return new Derived1();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        return new Derived2();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2354: No best common type exists among return expressions.
    function f11() {
             ~~~
!!! error TS2354: No best common type exists among return expressions.
        return new Base();
        return new AnotherClass();
    }
    var f12 = function () {
              ~~~~~~~~
!!! error TS2354: No best common type exists among return expressions.
        return new Base();
        return new AnotherClass();
    };
    var f13 = () => {
              ~~~~~~~
        return new Base();
    ~~~~~~~~~~~~~~~~~~~~~~
        return new AnotherClass();
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2354: No best common type exists among return expressions.
    